--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,14 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.doto-logo {
+  font-family: "Doto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "ROND" 0;
+}
 .App-link {
   color: #61dafb;
 }
